test/files/neg/badtok-2.scala
//bug 990
object Test {
`x
