test/files/neg/badtok-2.check
badtok-2.scala:3: error: unclosed quoted identifier
`x
^
one error found
